working on dropdown menu

--- a/main.html
+++ b/main.html
@@ -17,7 +17,15 @@
 <!-- Manually create header -->
 <div id="navbar">
   <a href="#projects">Projects</a>
-  <a href="#lang">Languages</a>
+    <div class="dropdown">
+      <a href="#lang">Languages</a>
+      <div class="dropcontent">
+        <a href="#">SQL</a>
+        <a href="#">R</a>
+        <a href="#">Python</a>
+        <a href="#">Others</a>
+      </div>
+    </div>
   <a href="#home">About</a>
 </div>
 
