having issues getting dropdown menu to show

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <div id="navbar">
   <a href="#projects">Projects</a>
     <div class="dropdown">
-      <a href="#lang">Languages</a>
+      <button class="dropbtn"><a href="#lang">Languages<sub>&nbsp;&nbsp;V</sub></a></button>
       <div class="dropcontent">
         <a href="#">SQL</a>
         <a href="#">R</a>
