--- a/main.html
+++ b/main.html
@@ -17,15 +17,7 @@
 <!-- Manually create header -->
 <div id="navbar">
   <a href="#projects">Projects</a>
-    <div class="dropdown">
-      <button class="dropbtn"><a href="#lang">Languages<sub>&nbsp;&nbsp;V</sub></a></button>
-      <div class="dropcontent">
-        <a href="#">SQL</a>
-        <a href="#">R</a>
-        <a href="#">Python</a>
-        <a href="#">Others</a>
-      </div>
-    </div>
+  <a href="#lang">Languages</a>
   <a href="#home">About</a>
 </div>
 
