--- a/test.html
+++ b/test.html
@@ -6,16 +6,15 @@
 </head>
 <body>
 <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
+  <a href="#projects">Projects</a>
+  <a href="#home">About</a>
   <div class="dropdown">
-    <button class="dropbtn">Dropdown 
-      <i class="fa fa-caret-down"></i>
-    </button>
+    <button class="dropbtn">Languages</button>
     <div class="dropdown-content">
-      <a href="#l1">Link 1</a>
-      <a href="#l2">Link 2</a>
-      <a href="#l3">Link 3</a>
+      <a href="#sql">SQL</a>
+      <a href="#r">R</a>
+      <a href="#pyt">Python</a>
+      <a href="#misc">Etc.</a>
     </div>
   </div> 
 </div>
