--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\test.css">
 </head>
 <body>
+<div id="navbar">
 <div class="navbar">
   <a href="#projects">Projects</a>
   <a href="#home">About</a>
@@ -17,6 +18,7 @@
       <a href="#misc">Etc.</a>
     </div>
   </div> 
+</div>
 </div>
 
 <div id="l1">
@@ -33,6 +35,29 @@
 <div id="l3">
 	<p>Bye!</p>
 </div>
+
+<script type="text/javascript">
+  // When the user scrolls the page, execute myFunction 
+window.onscroll = function() {myFunction()};
+
+// Get the navbar
+var navbar = document.getElementById("navbar");
+
+// Get the offset position of the navbar
+var sticky = navbar.offsetTop;
+
+// Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+
+
+  
+</script>
 
 </body>
 </html>
