fixed an issue in main page

--- a/testing2.html
+++ b/testing2.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Data Driven</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
-     <link rel="stylesheet" type="text/css" href="Assets//CSS//decorate.css">
+<html>
+<head>
+	<title>Responsive Topnav with Dropdown</title>
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
 
- 
+  <link rel="stylesheet" type="text/css" href="Assets//CSS//t2design.css">
   <body>
-  
-<!-- Manually create header -->
-<div id="navbar">
-  <a href="#projects">Projects</a>
-  <a href="#lang">Languages</a>
-  <a href="#home">About</a>
+</head>
+<body>
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
-
-</header> 
+	</header> 
     <div class="container-fluid">
       <h1><center>Data Driven.</center></h1>
       <p id="caption" align="center"><bold>Complex data, expert analysis, clear reporting!</bold></p>
@@ -33,6 +37,7 @@
       <span class="border border-primary">
        <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 
        1000px;">
+     </body>
      </span>
     </div>
 
@@ -288,4 +293,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script src="Assets//javascript//action.js"></script>
   </body>
+</html>
+
+<
+
+</body>
 </html>
