--- a/main.html
+++ b/main.html
@@ -8,13 +8,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
-     <link rel="stylesheet" type="text/css" href="Assets//CSS//decorate.css">
   </head>
 
- 
+  <link rel="stylesheet" type="text/css" href="Assets//CSS//decorate.css">
   <body>
   
+
 <!-- Manually create header -->
 <div id="navbar">
   <a href="#projects">Projects</a>
@@ -33,6 +32,7 @@
       <span class="border border-primary">
        <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 
        1000px;">
+     </body>
      </span>
     </div>
 
