--- a/main.html
+++ b/main.html
@@ -16,17 +16,17 @@
 
 <!-- Manually create header -->
 <div id="navbar">
+  <a href="#casa">Home</a>
   <a href="#projects">Projects</a>
-  <a href="#lang">Languages</a>
+  <a href="#languas">Languages</a>
   <a href="#home">About</a>
 </div>
 
 
 </header> 
     <div class="container-fluid">
-      <h1><center>Data Driven.</center></h1>
+      <h1 id="casa"><center>Data Driven.</center></h1>
       <p id="caption" align="center"><bold>Complex data, expert analysis, clear reporting!</bold></p>
-
 
       <div id="one">
       <span class="border border-primary">
@@ -60,10 +60,28 @@
 
  <!-- Display coding language knowledge -->
 
-    <div class="container-fluid" id="lang">
-      <h2 align="center">Programming Languages</h2>
-      <section id="sql">
-        <h4>Structured Querying Language (SQL)</h4>
+    <div class="container-fluid" >
+      <h2 align="center" id="languas">Programming Languages</h2>
+      <div class="lang">
+        <h4>Fluent in:</h4>
+        <h5><a href="#r">R</a></h5>
+        <h5><a href="#python">Python</a></h5>
+        <h5><a href="#sql">Structured Querying Language (SQL)</a></h5> 
+        <h5><a href="#misc">Other Languages</a></h5> 
+      </div>
+    </div>
+
+<section id="r">
+  <h4>R</h4>
+</section>
+
+<section id="python">
+  <h4>Python</h4>
+
+</section>
+
+<section id="sql">
+        <h4>SQL</h4>
         <p><strong>Expertise in:</strong></p>
         <ul>
           <li>Relational database design and development</li>
@@ -78,7 +96,7 @@
         <p><strong>Lab exercises from Querying Data with Transact-SQL</strong></p>
 <div id="sql">
         <div tabindex="-1" id="notebook" class="border-box-sizing">
-    <div class="container" id="notebook-container">
+        <div class="container" id="notebook-container">
 
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
@@ -255,18 +273,12 @@
 <span class="n">END</span>
 </pre></div>
 </div>
-      </section>
+</section>
 
-      <section id="r">
-        <h4>R</h4>
-      </section>
-      <section id="python">
-        <h4>Python</h4>
-      </section>
-    </div>
-  
-  </div>
-  
+<section id="misc">
+  <h4>Other Languages</h4>
+</section>
+
      <div id="home">
          <img src="C:\Users\loret\OneDrive\Pictures\Screenshots\facebook-album-202560623434121\facebook-album-202560623434121\452.jpg" height="300px" width="250px" id="lore">
         <h3>My Story</h3>
