--- a/main.html
+++ b/main.html
@@ -45,6 +45,7 @@
     <p>While working towards completing my undergraduate degrees at the University of Pittsburgh - a Bachelor of Science in Economics and a Bachelor of Arts in Political Science as well as certificates in African Studies, Latin American Studies and Global Studies - I designed and executed in field research in my country of birth, Ghana. Although I'm a naturalized US citizen, I have had a long cultivated love for my first country. Hearing stories about about my entrepreneural grandmothers inspired me to conduct and publish rigorous interdisciplinary resarch (including regression analysis with R).</p>
 
     <h4 style="color: blue"> Data Science Projects</h4>
+    <p>The following projects showcase my experience in data & text mining, marketing analytics and predictive analysis.</p> 
     <h5>Titanic Survival Analysis</h5>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRiaw1LXxpYNiuHXnD6Uu911fRBWOFbEZQMgV4HuyuW0_766GHwYQYlcsyfFvalqwQ4tsU6hlAJZguX/embed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" align="center"></iframe>
 
@@ -73,6 +74,19 @@
 
 <section id="r">
   <h4>R</h4>
+  <p><strong>Expertise in:</strong></p>
+  <ul>
+    <li>Exploratory data analysis with continuous & categorical variables</li>
+    <li>Inference and data visualization</li>
+    <li>Monte Carlo Models & Baysian Statistics</li>
+  </ul>
+
+  <p><strong>Completed Training Material:</strong></p>
+  <ul>
+    <li><a href="https://swirlstats.com/" target="_blank">Basics: swirl</li>
+    <li><a href="https://www.springest.com/lynda/up-and-running-with-r" target="_blank">Up and Running with R</a></li>
+    <li><a href="https://www.lynda.com/R-tutorials/R-Statistics-Essential-Training/142447-2.html?srchtrk=index%3a22%0alinktypeid%3a2%0aq%3aup+and+running+with+r%0apage%3a1%0as%3arelevance%0asa%3atrue%0aproducttypeid%3a2" target="_blank">R Statistics Essential Training</a></li>
+  </ul>
 </section>
 
 <section id="python">
